--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -15,10 +15,11 @@
 \usepackage{enumerate}
 \usepackage{epstopdf}
 \usepackage{csquotes}
-\usepackage[flushleft]{threeparttable}
 \usepackage{hyperref}
+\usepackage{cite}
 \usepackage{url}
 \usepackage{amsmath}
+\usepackage[flushleft]{threeparttable}
 \usepackage[super]{nth}
 
 \graphicspath{{figures/}}
@@ -31,25 +32,22 @@
 \title{Performance Optimization of Service Chain \\ for vCPE in Small Size Network \\ with OpenFlow Switch}
 
 % author names and IEEE memberships
-\author{
-\IEEEauthorblockN{
-Nen-Fu Huang\IEEEauthorrefmark{1}
+\author{\IEEEauthorblockN{
+Nen-Fu Huang\IEEEauthorrefmark{1},
 Chia-An Li\IEEEauthorrefmark{1},
 Chi-Hsuan Li\IEEEauthorrefmark{1},
 Chia-Chi Chen\IEEEauthorrefmark{1},
 I-Hsien Hsu\IEEEauthorrefmark{1}, \\
-Che-Chuan Li \IEEEauthorrefmark{1},
-Ching-Hsuan Chen\IEEEauthorrefmark{2} and,
-I-Ju Liao\IEEEauthorrefmark{1}
-}
+Che-Chuan Li\IEEEauthorrefmark{1},
+Ching-Hsuan Chen\IEEEauthorrefmark{2} and
+I-Ju Liao\IEEEauthorrefmark{1}}
 
 \IEEEauthorblockA{
 \IEEEauthorrefmark{1}
-Department of Computer Science National Tsing Hua University, Hsinchu, Taiwan\\
-}
-\IEEEauthorblockA{\IEEEauthorrefmark{2}
-Institute of Communication Engineering National Tsing Hua University, Hsinchu, Taiwan\\
-}
+Department of Computer Science National Tsing Hua University, Hsinchu, Taiwan}
+\IEEEauthorblockA{
+\IEEEauthorrefmark{2}
+Institute of Communication Engineering National Tsing Hua University, Hsinchu, Taiwan}
 }
 
 % The paper headers
@@ -62,12 +60,12 @@ Institute of Communication Engineering National Tsing Hua University, Hsinchu, T
 % As a general rule, do not put math, special symbols or citations
 % in the abstract or keywords.
 \begin{abstract}
-In the last decade, along with the continuously developing of SDN, numerous SDN applications have played important roles in modern network. vCPE is one of potential applications can make game change because it can reduce OPEX and CAPEX in the same time. This service compose of many technologies with complex architecture like NFV, VNF and Service Chaining. Many researches discuss algorithm or mechanism to link multiple VNFs as a single NFV then connect NFVs as a service chain in cloud. Nevertheless, the hardware resource and characteristic of SDN switch that never mention before may waste in this architecture. In this paper, a vCPE framework with multiple flow table management based on cloud is implemented. The proposed of vCPE framework is to create a SDN-enabled VNF using both resoures in SDN switch and on cloud and these VNFs can be deployed as edge. The system is also integrated with an application identification engine based on machine learning algorithms thus providing flow control in vCPE framework with confidence. Experimental results show that the framework provide performance in VNF compete over single table SDN application.
+In the last decade, along with the continuously developing of software defined network (SDN), numerous SDN applications have played important roles in modern network. Virtual Customer Premise Equipment (vCPE) is one of potential applications can make game change because it can reduce OPEX and CAPEX in the same time. This service compose of many technologies with complex architecture like Virtualized Network Function (VNFs) and Service Chaining. Many researches discuss algorithm or mechanism to link multiple VNFs as a single Network Function Virtualization (NFV) then connect NFVs as a service chain in cloud. Nevertheless, the hardware resource and characteristic of SDN switch that never mention before may waste in this architecture. In this paper, a vCPE framework with multiple flow table management based on cloud is implemented. The proposed of vCPE framework is to create a SDN-enabled VNF using both resoures in SDN switch and on cloud and these VNFs can be deployed as edge. The system is also integrated with an application identification engine based on machine learning algorithms thus providing flow control in vCPE framework with confidence. Experimental results show that the framework provide performance in VNF compete over single table SDN application.
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-SDN, vCPE, VNF, NFV, OpenFlow
+Software defined network, virtual customer premise equipment, VNF, NFV, OpenFlow
 \end{IEEEkeywords}
 
 \IEEEpeerreviewmaketitle{}
@@ -76,9 +74,9 @@ SDN, vCPE, VNF, NFV, OpenFlow
 % Introduction
 % First paragraph of paper need be big Alhabet
 \section{Introduction}
-\IEEEPARstart{S}{DN}\cite{sdn-new-norm}, \cite{sdn-comprehensive} has been developing almost a decade since the first Openflow article had be presented in 2008\cite{openflow-campus-network}. Openflow\cite{sp:openflow13} gives a brand new viewpoint on network research, and makes innovation on industries. This technic proposed not just a novel architecture but also bring out more methods of flexible traffic engineering. After tons of implementations and researches had been proposed, this architecture exposed some weakness in performance. The main concept of this architecture is separating data plane and control plane that put smart control and multi-path into real world. But legacy hardware design eventually put this perfect design into reality. To achieve high speed packet exchange, ternary content-addressable memory (TCAM) plays an important role in legacy fabric switching. This hardware design speed up the packet switching but it also cause high cost and less size problems.
+\IEEEPARstart{S}{oftware} Define Network \cite{sdn-new-norm}, \cite{sdn-comprehensive} has been developing almost a decade since the first Openflow article had be presented in 2008\cite{openflow-campus-network}. Openflow\cite{sp:openflow13} gives a brand new viewpoint on network research, and makes innovation on industries. This technic proposed not just a novel architecture but also bring out more methods of flexible traffic engineering. After tons of implementations and researches had been proposed, this architecture exposed some weakness in performance. The main concept of this architecture is separating data plane and control plane that put smart control and multi-path into real world. But legacy hardware design eventually put this perfect design into reality. To achieve high speed packet exchange, ternary content-addressable memory (TCAM) plays an important role in legacy fabric switching. This hardware design speed up the packet switching but it also cause high cost and less size problems.
 In the beginning, most of SDN switch used legacy hardware design and just add software API support for temporary solution. The smaller TCAM size comes the less flow control rules but it can keep high performance in packet switching. It brings out inter-datacenter dynamic traffic routing because that scenario doesn’t need much flow entries.
-At the same time as SDN was developed, Network Function Virtualization (NFV)\cite{nfvwp},\cite{nfv-survey},\cite{laptop-sdn} has been introduced by Telco operators. Operators want to reduce their cost on maintaining old telco platform which may has been operated in 50 years. To replace the old platform with high maintenance cost, they use virtual machine (VM) based on new computers as solutions. This method can really save a lot of money in maintaining old platform but not all of operators have the same requirement as AT\&T; there is another idea about reducing OPEX and CAPEX in enterprise networks that is vCPE which was innovated by NEC\cite{nec-vcpe}. vCPE manage network functions on operation side to reduce cost which was deployed on cloud \cite{cloud4nfv}. Although both of technical ideas are perfect, it still address two critical problems. The first one is the lack of hardware support because these ideas need large size of flow tables to achieve multi VNF support. And the other is VM based on cloud may slow down the high speed network exchanging network\cite{nfv-placemet},\cite{nfv-placement-model}.
+At the same time as SDN was developed, Network Function Virtualization (NFV) \cite{nfvwp}\cite{nfv-survey}\cite{laptop-sdn} has been introduced by Telco operators. Operators want to reduce their cost on maintaining old telco platform which may has been operated in 50 years. To replace the old platform with high maintenance cost, they use virtual machine (VM) based on new computers as solutions. This method can really save a lot of money in maintaining old platform but not all of operators have the same requirement as AT\&T; there is another idea about reducing OPEX and CAPEX in enterprise networks that is vCPE which was innovated by NEC\cite{nec-vcpe}. vCPE manage network functions on operation side to reduce cost which was deployed on cloud \cite{cloud4nfv}. Although both of technical ideas are perfect, it still address two critical problems. The first one is the lack of hardware support because these ideas need large size of flow tables to achieve multi VNF support. And the other is VM based on cloud may slow down the high speed network exchanging network\cite{nfv-placemet},\cite{nfv-placement-model}.
 From Pica8\cite{pica8-switch} finished their first OpenFlow switches, there are so many implementation method on a SDN switch. Even Open Network Foundation (ONF)\cite{onf} has a series of testing processes, it can’t shows completely testing result of SDN switch especially performance. Let us take flow entries as example, there are single flow table and multiple flow table architectures much more based on hardware or software. Bandwidth control APIs have been an option in OpenFlow 1.3 but there are many switches still didn’t support these API. Even it did support, there are still at least two implementation methods should be noticed. Meters and per queue show different ways controlling bandwidth not mention to accuracy of bandwidth.
 Service chain\cite{service-chain} is another concept with vCPE framework because enterprise will apply a bulk of network services. This technic inherit weakness of SDN switches and vCPE so there is no standard to unified interface to link all services. It’s hard to combine and link all switches and cloud service in such complex situation. Different services on cloud must be working fine with different SDN switches and we believe that’s why most of service chain was implemented in VM on the cloud.
 
@@ -98,7 +96,7 @@ This paper is structured as follows. Section II introduce the overall architectu
 
 \section{System Description}
 \subsection{Overview of Network Function}\label{ssec:desc_nfv_overview}
-With the concept of SDN-enabled VNFs\cite{sdn-enabled}\cite{manage-nve}, SDN technology work not only for traffic steering but also as a part of network functions. In this idea, network functions have been achieved by the synergies between computer infrastructures(NFV) and network infrastructures(NFVI)\cite{nfv2014-v121},\cite{nfv2015}, shown in Fig. \ref{fig:desc_nfv_overview}. The former is a VNF controller, mainly responsible for dealing with stateful processing. The latter is a SDN switch used for stateless processing.
+The use of SDN-enabled VNFs\cite{sdn-enabled}\cite{manage-nve}, SDN technology work not only for traffic steering but also as a part of network functions. In this idea, network functions have been achieved by the synergies between computer infrastructures(NFV) and network infrastructures(NFVI)\cite{nfv2014-v121},\cite{nfv2015}, shown in Fig. \ref{fig:desc_nfv_overview}. The former is a VNF controller, mainly responsible for dealing with stateful processing. The latter is a SDN switch used for stateless processing.
 
 \subsubsection{Stateful Processing Component (VNF controller in container)}
 This component have to control the workflow, keep the state associated with the VNF, and provide interface for service providers or customers to configure and update the behavior of the stateless datapath processing component. We use SDN controller to implement the NFV controller and it’s worth noting that we use southbound APIs of SDN controller framework to handle the interface between the stateful and stateless component with OpenFlow protocol, which was originally designed for this.
